<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
 
     <TextView 
         android:id="@+id/par_set_fasResTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/fastResponseTime"
        />
    
    <EditText 
        android:id="@+id/par_set_fasResTimeEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/par_set_fasResTime"
        android:layout_toRightOf="@id/par_set_fasResTime"
        android:layout_alignParentRight="true"
        />
     <TextView 
         android:id="@+id/par_set_serPortNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/par_set_fasResTime"
        android:text="@string/fastResponseTime"
        />
    
    <EditText 
        android:id="@+id/par_set_serPortNumEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/par_set_serPortNum"
        android:layout_toRightOf="@id/par_set_serPortNum"
        android:layout_alignParentRight="true"
        />
     <TextView 
         android:id="@+id/par_set_savEleStaTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/par_set_serPortNum"
        android:text="@string/serialPortNum"
        />
    
    <EditText 
        android:id="@+id/par_set_savEleStaTimeEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/par_set_savEleStaTime"
        android:layout_toRightOf="@id/par_set_savEleStaTime"
        android:layout_alignParentRight="true"
        />
    
    <Button 
        android:id="@+id/par_set_back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/par_set_savEleStaTime"
        android:text="@string/back"
        />
    
    <Button 
        android:id="@+id/par_set_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/par_set_back"
        android:text="@string/save"
        />
</RelativeLayout>